# health-risk-predictor

./: pyproject.toml
health_risk_predictor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model/: model.ipynb  support.ipynb
