[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health-risk-predictor"
version = "0.1.0"
description = "Heart disease risk prediction with ML and ChatGPT explanations via Flask"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy==2.3.0",
    "pandas==2.3.0",
    "scikit-learn==1.7.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "flask>=3.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.1",
    "jupyterlab>=4.0.0"
]

[tool.setuptools]
packages = ["model"]
